# libvmod-geoip

./: .gitignore  Makefile.am  README.rst  configure.ac  vmod-geoip.spec
debian/: changelog  control  rules
man/: libvmod_geoip.3
src/: Makefile.am  vmod_geoip.c  vmod_geoip.vcc  vmod_geoip_v6.vcc
src/tests/: test01.vtc  test02.vtc  test03.vtc  test04.vtc  test05.vtc  test06.vtc  test07.vtc
